--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-web": "~0.13.12",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
@@ -24,6 +26,7 @@
     "@types/jest": "^26.0.23",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "@types/react-redux": "^7.1.16",
     "@types/styled-components": "^5.1.9",
     "@types/styled-components-react-native": "^5.1.1",
     "@types/webpack-env": "^1.16.0",
@@ -37,6 +40,8 @@
     "setupFilesAfterEnv": [
       "<rootDir>/testing/jest-setup.js"
     ],
+    "timers": "fake",
+    "testEnvironment": "jsdom",
     "reporters": [
       "default",
       [
